second-az-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: moon
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: app1.4.144.24.220.nip.io
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: nginxhello-default
            port:
              number: 80
